tests/integration/snapshots/integration__conformance__n_number_0.e1.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[0.e1]
stderr ---
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [0.e1]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
